First commited as before_4416_rev1